syntax = "proto3";

package NFq;

message TIssuesIds {
    enum EIssueCode {
        DEFAULT_ERROR = 0;
        UNEXPECTED = 1;
        INFO = 2;
        WARNING = 3;
        SUCCESS = 4;

        ACCESS_DENIED = 1000;
        INTERNAL_ERROR = 1001;
        TIMEOUT = 1002;
        BAD_REQUEST = 1003;
        EXPIRED = 1004;
        UNSUPPORTED = 1005;
        UNAUTHORIZED = 1006;
        NOT_READY = 1007;
        QUOTA_EXCEEDED = 1008;
    }
}
