package NYT.NTabletClient.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TTableReplicaStatistics
{
    required int64 committed_replication_row_index = 1;
    required uint64 current_replication_timestamp = 2;
}

message TTabletStatistics
{
    required int32 partition_count = 1;
    required int32 store_count = 2;
    required int32 preload_pending_store_count = 3;
    required int32 preload_completed_store_count = 4;
    required int32 preload_failed_store_count = 5;
    optional int32 overlapping_store_count = 6;
    optional uint64 last_commit_timestamp = 7;
    optional uint64 last_write_timestamp = 9;
    optional uint64 unflushed_timestamp = 8;
    optional int64 dynamic_memory_pool_size = 10 [default = 0];
    optional uint64 modification_time = 11;
    optional uint64 access_time = 12;
}

message TTabletPerformanceCounters
{
    required int64 dynamic_row_read_count = 1;
    optional int64 dynamic_row_read_data_weight_count = 14 [default = 0];
    required int64 dynamic_row_lookup_count = 2;
    optional int64 dynamic_row_lookup_data_weight_count = 15 [default = 0];
    required int64 dynamic_row_write_count = 3;
    optional int64 dynamic_row_write_data_weight_count = 11 [default = 0];
    required int64 dynamic_row_delete_count = 4;
    required int64 static_chunk_row_read_count = 5;
    optional int64 static_chunk_row_read_data_weight_count = 16 [default = 0];
    optional int64 static_hunk_chunk_row_read_data_weight_count = 20 [default = 0];
    required int64 static_chunk_row_lookup_count = 6;
    optional int64 static_chunk_row_lookup_data_weight_count = 17 [default = 0];
    optional int64 static_hunk_chunk_row_lookup_data_weight_count = 21 [default = 0];
    optional int64 compaction_data_weight_count = 12 [default = 0];
    optional int64 partitioning_data_weight_count = 13 [default = 0];
    required int64 write_error_count = 18 [default = 0];
    required int64 lookup_error_count = 19 [default = 0];

    // COMPAT(alexelexa)
    reserved 7, 8, 9, 10;
}

message TTableReplicaInfo
{
    required NYT.NProto.TGuid replica_id = 1;
    required TTableReplicaStatistics statistics = 2;

    reserved 3;

    optional bool has_error = 4 [default = false];

}

message TTabletInfo
{
    required NYT.NProto.TGuid tablet_id = 1;
    required uint64 mount_revision = 8;
    required TTabletStatistics statistics = 2;
    repeated TTableReplicaInfo replicas = 3;
    required TTabletPerformanceCounters performance_counters = 4;
    optional int32 error_count = 7;

    reserved 5, 6;
}

////////////////////////////////////////////////////////////////////////////////

